<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="294dp"
        android:layout_height="189dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/timeoff_logo"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="285dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/login"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_buttons"
            android:contentDescription="@string/login"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/registration"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/registration"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/registration"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_buttons"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gmail"
        android:layout_width="232dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="370dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="233dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/fields"
            android:inputType="textEmailAddress"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="430dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/fields"
            android:inputType="textEmailAddress"
            android:textColorHint="#616161"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/auth_mail"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="351dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/auth_password"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="411dp"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/reg"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/main_buttons"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/to_registrate"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton
        android:id="@+id/male"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="372dp"
        app:layout_constraintStart_toEndOf="@+id/gmail"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="372dp"
        app:layout_constraintStart_toEndOf="@+id/gmail"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginStart="300dp"
        android:text="@string/male_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="17sp"/>


    <TextView
        android:id="@+id/text_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginStart="344dp"
        android:text="@string/female_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="17sp"/>

    <RadioButton
        android:id="@+id/agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/agreement"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>