<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.RegistrFragment"
        android:id="@+id/reg_layout">



        <ImageView
            android:id="@+id/logo"
            android:layout_width="369dp"
            android:layout_height="263dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/logo_start"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/login"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="134dp"
            android:layout_height="48dp"
            android:layout_marginTop="280dp"
            android:backgroundTint="@color/light_buttons"
            android:contentDescription="@string/login"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.267"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/registration"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="136dp"
            android:layout_height="48dp"
            android:layout_marginTop="280dp"
            android:backgroundTint="@color/light_buttons"
            android:contentDescription="@string/registration"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.754"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reg_mail"
            android:layout_width="226dp"
            android:layout_height="36dp"
            android:layout_marginTop="364dp"
            android:autofillHints="creditCardExpirationDate"
            android:background="@drawable/blue_outline"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="270dp"
            android:layout_height="37dp"
            android:layout_marginTop="24dp"
            android:autofillHints="creditCardExpirationDate"
            android:background="@drawable/blue_outline"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_mail"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/text_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/auth_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:text="@string/auth_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_mail"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/reg"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="215dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/main_buttons"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/to_registrate"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agreement"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.646">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="3dp"
                app:layout_constraintStart_toEndOf="@+id/gmail"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="-30dp"
                app:layout_constraintStart_toEndOf="@+id/gmail"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/male_checkbox"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration" />

        <TextView
            android:id="@+id/text_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="344dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/female_checkbox"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration" />

        <RadioButton
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/agreement"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>