<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="310dp"
        android:layout_height="518dp"
        android:background="@drawable/dialog_booker_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butn_back_from_dialog"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/fields"
        android:elevation="4dp"
        android:text="Назад"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7"
        tools:ignore="TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:textSize="17sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:text="@string/people_amount"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="110dp"
        android:textSize="17sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/time_start"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="216dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/time_end"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />

    <EditText
        android:id="@+id/date"
        android:layout_width="97dp"
        android:layout_height="38dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="@drawable/blue_outline"
        android:ems="10"
        android:textAlignment="center"
        android:paddingLeft="5dp"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/people"
        android:layout_width="59dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/blue_outline"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/bonuses_to_spend"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/blue_outline"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/time_start_edit"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/blue_outline"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/time_end_edit"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/blue_outline"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/bonus_to_give"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toBottomOf="@+id/time_end_edit" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sum"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toBottomOf="@+id/time_end_edit" />

    <TextView
        android:id="@+id/sum_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montserrat"
        android:text="1000"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toBottomOf="@+id/time_end_edit" />

    <Button
        android:id="@+id/enter"
        android:layout_width="186dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/main_buttons"
        android:contentDescription="@string/login"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/make_an_order"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toBottomOf="@+id/sum_cost"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>